fb page added but not showing, map correctly added

--- a/resources/stylesheet.css
+++ b/resources/stylesheet.css
@@ -766,3 +766,17 @@ img {vertical-align: middle;}
 @media only screen and (max-width: 300px) {
   .otherprev, .othernext,.text {font-size: 11px}
 }
+
+
+
+
+
+
+/*google map*/
+
+#map {
+  width:100%;
+  height:300px;
+  padding:0px;
+  margin: 0 auto;
+}
